--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ colors
 /*************************************
 gray color
 *************************************/
-    --color-gray-1: #D8D8D9;
+    --color-gray-0: #D8D8D9;
     --color-gray-1: #B1B2B3;
     --color-gray-2: #8B8B8C;
     --color-gray-3: #646566;
@@ -89,8 +89,28 @@ nav li {
 nav a, nav a:visited {
     color: var(--color-primary);
     padding: 2px 1rem;
-	text-decoration: none;
+    position: relative;
+    text-decoration: none;
+    
 }
+
+nav a:before {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 2px;
+    bottom: 0;
+    left: 0;
+    background-color: var(--color-primary);
+    visibility: hidden;
+    transform: scaleX(0);
+    transition: all 0.3s ease-in-out 0s;
+  }
+
+nav a:hover:before {
+    visibility: visible;
+    transform: scaleX(1);
+  }
 
 nav a:hover {
     color: var(--color-white);
@@ -102,17 +122,13 @@ nav a:focus {
 }
 
 nav a:active {
-	color: var(--color-splash);
+	color: var(--color-gray-0);
 }
 
 nav .active {
-    background-color: var(--color-white);
-    color: var(--color-gray-4);
+    border: 1px solid var(--color-white);
 }
 
-nav .active:hover {
-    color: var(--color-gray-6);
-}
 
 @media screen and ( min-width: 600px ) {
     nav li {
