added images, resume, grid for projects

--- a/style.css
+++ b/style.css
@@ -42,9 +42,34 @@ body {
 .color-secondary {
     color: var(--color-secondary);
 }
+
+h1{
+    font-size: 2rem;
+}
+
+h2{
+    font-size: 1.8rem;
+}
+
+h3{
+    font-size: 1.6rem;
+}
+
+h4{
+    font-size: 1.4rem;
+}
+
+h5{
+    font-size: 1.2rem;
+}
+
+h6{
+    font-size: 1.1rem;
+}
 /*************************************
 Main layout
 *************************************/
+
 body {
     background-color: var(--color-blue-dark);
 }
@@ -56,6 +81,24 @@ main {
 }
 
 
+/****
+hr {
+    background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0));
+    border: 0;
+    height: 1px;
+        
+}
+****/
+/*************************************
+header
+*************************************/
+
+header {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    
+}
 
 /*************************************
 links
@@ -82,6 +125,7 @@ a:active {
 /*************************************
 navigation
 *************************************/
+
 nav li {
     list-style-type: none;
     text-decoration: none;
@@ -105,12 +149,12 @@ nav a:before {
     visibility: hidden;
     transform: scaleX(0);
     transition: all 0.3s ease-in-out 0s;
-  }
+}
 
 nav a:hover:before {
     visibility: visible;
     transform: scaleX(1);
-  }
+}
 
 nav a:hover {
     color: var(--color-white);
@@ -131,14 +175,14 @@ nav .active {
 
 
 @media screen and ( min-width: 600px ) {
-    nav li {
+    header li {
         display: inline-block;
     }
     
 }
 
 @media screen and ( min-width: 900px ) {
-    nav li {
+    header li {
         font-size: 3rem;
     }
     
@@ -150,6 +194,7 @@ nav .active {
 hero banner & Logo
 *************************************/
 .logo {
+    text-align: center;
     font-size: 2rem;
 }
 @media screen and (min-width:318px) {
@@ -157,14 +202,87 @@ hero banner & Logo
     font-size: 3rem;
     }
 }
+
+h1 {
+    font-weight: 700 ;
+}
 /*************************************
 Buttons
 *************************************/
+.normal-button-link, .normal-button-link:visited {
+	background: var(--color-gray-4); background: rgba(255, 255, 255, 0.2);
+    border: 4px solid;
+    border-radius: 9px;
+    font-size: 1.5rem;
+    padding: 1rem;
+    max-height: 4rem;
+}
 
+.normal-button-link:hover  {
+	color: var(--color-secondary);
+	background-color: var(--color-primary);
+}
+
+.normal-button-link:active{
+ 	background-color: var(--color-splash);
+ 	border: double;
+	border-color: var(--color-white);
+}
 /*************************************
 cards
 *************************************/
+.container-contact {
+    align-content: center;
+    background-color: var(--color-white);
+    border: 1px solid var(--color-gray-0);
+    box-shadow: 8px 8px var(--color-primary);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    max-width: 35rem;
+    padding: 1rem;
 
+}
+
+.container-contact a, .containter-contact a:visited {
+    color: var(--color-blue-dark);
+}
+
+.container-contact a:hover {
+    color: var(--color-splash);
+}
+
+.container-resume {
+    background-color: var(--color-gray-4);
+    border: 1px solid var(--color-gray-5);
+    box-shadow: 8px 8px 5px var(--color-primary);
+    max-width: 35rem;
+    padding: 1rem;
+}
+
+.container-resume:hover {
+    box-shadow: 8px 8px var(--color-primary);
+
+}
+
+/*************************************
+grid
+*************************************/
+.grid {
+    display: grid;
+    grid-template-columns: 2fr 1fr 2fr;
+    grid-gap: 2rem;
+    justify-items: center;
+}
+
+.grid img{
+    max-width: 15rem;
+}
 /*************************************
 footer
 *************************************/
+
+footer {
+    text-align: center;
+
+}
