--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ colors
 *************************************/
     --color-primary: #64C6C5;
     --color-secondary: #548584;
-    --color-splash: #daa520;
+    --color-splash: rgb(218, 165, 32);
     --color-blue-dark:#30384c;
     --color-black: #050609;
     --color-white: #f9f9f9;
@@ -48,7 +48,9 @@ h1{
 }
 
 h2{
+    text-align: center;
     font-size: 1.8rem;
+
 }
 
 h3{
@@ -77,7 +79,11 @@ body {
 main {
     line-height: 1.5;
     margin: auto;
+    margin-top: 5rem;
     max-width: 45rem;
+}
+main p {
+    margin-bottom: 2rem;
 }
 
 
@@ -114,8 +120,9 @@ a:hover {
 }
 
 a:focus {
-    outline: none;
     color: var(--color-gray-2);
+    outline: none;
+    
 }
 
 a:active {
@@ -139,16 +146,16 @@ nav a, nav a:visited {
 }
 
 nav a:before {
-    content: "";
-    position: absolute;
-    width: 100%;
-    height: 2px;
-    bottom: 0;
-    left: 0;
     background-color: var(--color-primary);
-    visibility: hidden;
+    bottom: 0;
+    content: "";
+    height: 2px;
+    left: 0;
+    position: absolute;
     transform: scaleX(0);
     transition: all 0.3s ease-in-out 0s;
+    width: 100%;
+    visibility: hidden;
 }
 
 nav a:hover:before {
@@ -188,15 +195,54 @@ nav .active {
     
 }
 
+/*************************************
+Keystone animations
+*************************************/
+.pulse-animation {
 
-
+    cursor: pointer;
+}
+  
+  .pulse-animation:hover {
+    animation: pulse 2s infinite;
+}
+  
+  @keyframes pulse {
+    0% {
+      box-shadow: 0 0 0 0 rgba(255, 255, 255, 0.4);
+    }
+    70% {
+      box-shadow: 0 0 0 30px rgba(255, 255, 255, 0);
+    }
+    100% {
+      box-shadow: 0 0 0 0 rgba(255, 255, 255, 0);
+    }
+}
 /*************************************
 hero banner & Logo
 *************************************/
 .logo {
-    text-align: center;
     font-size: 2rem;
+    opacity: 1;
+    text-align: center;
+    
 }
+.hero {
+    align-items: center;
+    background: linear-gradient(135deg, rgba(48,56,76,1) 0%, rgba(0,212,255,1) 100%);
+    border: 5px solid white;
+    display: flex;
+    flex-direction: column;
+    font-size: 5rem;
+    height: 40rem;
+    justify-content: space-evenly ;
+    min-height: 50%;
+    margin: auto;
+    padding: 4rem;
+}
+
+
+
 @media screen and (min-width:318px) {
     .logo {
     font-size: 3rem;
@@ -210,12 +256,15 @@ h1 {
 Buttons
 *************************************/
 .normal-button-link, .normal-button-link:visited {
+    text-align: center;
 	background: var(--color-gray-4); background: rgba(255, 255, 255, 0.2);
     border: 4px solid;
     border-radius: 9px;
     font-size: 1.5rem;
-    padding: 1rem;
     max-height: 4rem;
+    max-width: 30rem;
+    padding: 1rem;
+    
 }
 
 .normal-button-link:hover  {
@@ -281,6 +330,16 @@ grid
 
 .grid img:hover {
     transform: scale(1.5);
+}
+
+/*************************************
+images
+*************************************/
+
+.large-img {
+    height: auto;
+    width: 100%;
+    max-width: 45rem;
 }
 /*************************************
 footer
